--- a/Lab_2/Lab_2.ioc
+++ b/Lab_2/Lab_2.ioc
@@ -11,24 +11,23 @@ Mcu.Name=STM32F103C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PB3
-Mcu.Pin13=PB4
-Mcu.Pin14=PB5
-Mcu.Pin15=PB6
-Mcu.Pin16=VP_SYS_VS_ND
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PA5
-Mcu.Pin3=PA6
-Mcu.Pin4=PA7
-Mcu.Pin5=PB0
-Mcu.Pin6=PB1
-Mcu.Pin7=PB2
-Mcu.Pin8=PA8
-Mcu.Pin9=PA9
-Mcu.PinsNb=19
+Mcu.Pin10=PA9
+Mcu.Pin11=PB3
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=PB6
+Mcu.Pin15=VP_SYS_VS_ND
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PA3
+Mcu.Pin3=PA4
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PB2
+Mcu.Pin9=PA8
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Tx
@@ -47,41 +46,39 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=Lest_Test_All
+PA1.GPIO_Label=Led_Test_All
 PA1.Locked=true
 PA1.Signal=GPIO_Output
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=EN_3
-PA10.Locked=true
-PA10.Signal=GPIO_Output
-PA13.Locked=true
-PA13.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=Led_Test_Timer
 PA2.Locked=true
 PA2.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=Dot
-PA5.Locked=true
-PA5.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=Dot
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=Led_5
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=Led_5
+PA6.GPIO_Label=EN_0
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=EN0
+PA7.GPIO_Label=EN_1
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=EN_1
+PA8.GPIO_Label=EN_2
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=EN_2
+PA9.GPIO_Label=EN_3
 PA9.Locked=true
 PA9.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=EN_0
+PB0.GPIO_Label=SEG0
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
@@ -136,7 +133,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
